Mise en place, du syteme de grid/cellule/regle

--- a/Conway_Life_POO.vcxproj
+++ b/Conway_Life_POO.vcxproj
@@ -131,6 +131,9 @@
   <ItemGroup>
     <ClCompile Include="Conway_Life_POO.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="GameData.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
