file manager done

--- a/Conway_Life_POO.vcxproj.filters
+++ b/Conway_Life_POO.vcxproj.filters
@@ -18,5 +18,16 @@
     <ClCompile Include="Conway_Life_POO.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="File_manager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="GameData.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="File_manager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
