--- a/Conway_Life_POO.vcxproj.filters
+++ b/Conway_Life_POO.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="GameLoop.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="CellState.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
