Decomposition de la class Cell

--- a/Conway_Life_POO.vcxproj
+++ b/Conway_Life_POO.vcxproj
@@ -129,10 +129,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Cell.cpp" />
     <ClCompile Include="Conway_Life_POO.cpp" />
     <ClCompile Include="File_manager.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Cell.h" />
     <ClInclude Include="CellState.h" />
     <ClInclude Include="File_manager.h" />
     <ClInclude Include="GameData.h" />
