--- a/Conway_Life_POO.vcxproj.filters
+++ b/Conway_Life_POO.vcxproj.filters
@@ -18,7 +18,7 @@
     <ClCompile Include="Conway_Life_POO.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="File_manager.cpp">
+    <ClCompile Include="FileManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -26,7 +26,7 @@
     <ClInclude Include="GameData.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="File_manager.h">
+    <ClInclude Include="FileManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="GameLoop.h">
