rename file_manager -> FileManager

--- a/Conway_Life_POO.vcxproj
+++ b/Conway_Life_POO.vcxproj
@@ -132,7 +132,7 @@
     <ClCompile Include="Cell.cpp" />
     <ClCompile Include="Conway_Life_POO.cpp" />
     <ClCompile Include="Display.cpp" />
-    <ClCompile Include="File_manager.cpp" />
+    <ClCompile Include="FileManager.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GraphicalDisplay.cpp" />
     <ClCompile Include="Grid.cpp" />
@@ -142,7 +142,7 @@
     <ClInclude Include="Cell.h" />
     <ClInclude Include="CellState.h" />
     <ClInclude Include="Display.h" />
-    <ClInclude Include="File_manager.h" />
+    <ClInclude Include="FileManager.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GraphicalDisplay.h" />
     <ClInclude Include="Grid.h" />
