--- a/Conway_Life_POO.vcxproj
+++ b/Conway_Life_POO.vcxproj
@@ -146,7 +146,7 @@
     <ClInclude Include="Game.h" />
     <ClInclude Include="GraphicalDisplay.h" />
     <ClInclude Include="Grid.h" />
-    <ClInclude Include="Patterns.h" />
+    <ClInclude Include="Paterns.h" />
     <ClInclude Include="Rule.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
