--- a/Conway_Life_POO.vcxproj.filters
+++ b/Conway_Life_POO.vcxproj.filters
@@ -65,7 +65,7 @@
     <ClInclude Include="Game.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Patterns.h">
+    <ClInclude Include="Paterns.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
